--- a/templates/user.html
+++ b/templates/user.html
@@ -28,3 +28,15 @@
 </div>
 </div>
 {% endblock %}
+
+<!DOCTYPE html>
+<html>
+<head>
+    <!-- Include any necessary CSS or other resources -->
+</head>
+<body>
+    <h1>User Page</h1>
+
+    <p>Welcome, {{ name }}!</p>
+</body>
+</html>
